--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title> Anova Creative</title>
   </head>
+  <h1> This is the header</h1>
   <body>
   
   </body>
