--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/v4-shims.css">
 	<script src="https://webfonts.creativecloud.com/varela-round:n4:default;questrial:n4:default.js" type="text/javascript"></script>
 	<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
-	<link href="index/style.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
 
