--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md bg-light navbar-light sticky-top">
 <div class="container-fluid ">
-		<a class="navbar-brand " href="#"><img src="/img/portfolio/anova.png"></a>
+		<a class="navbar-brand " href="#"><img src="img/portfolio/anova.png"></a>
 
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
