--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="img/Anova_favicon.png">
+	<link rel="shortcut icon" href="./img/Anova_favicon.png">
 	<title>Anova Creative</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -21,7 +21,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md bg-light navbar-light sticky-top">
 <div class="container-fluid ">
-		<a class="navbar-brand " href="#"><img src="img/portfolio/anova.png"></a>
+		<a class="navbar-brand " href="#"><img src="./img/portfolio/anova.png"></a>
 
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -77,7 +77,7 @@
 		 <h1><span class="center">I am <strong>Juan Guillen</strong> </span></h1>
 
 		 <h2>and I want to help you build your website.</h2>
-		 <img src="/img/me-2x.jpg" class="avatar" alt="image of Juan Guillen" >
+		 <img src="./img/me-2x.jpg" class="avatar" alt="image of Juan Guillen" >
 		 <p class="parpadding">Anova Creative is a freelance service based in California, after earning my B.S. in Computer Science I decided to work for myself and help local businesses gain a better appearance in today's technological world. </P>
 		<p class="parpadding light-text">I share my experience while designing websites, developing marketing startegies and producing multimedia content for businesses.</p>
 	 </div>
