--- a/index.html
+++ b/index.html
@@ -69,22 +69,24 @@
 
 			<h1 class="col-12 display-3 text-center  "> Analyzing the culture of tech.</h1>
 
-		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-lx-2">
-		</div>
+</div>
+</div>
 <!--- Welcome Section -->
  <div id="about">
-	 <div class="container-fluid padding titlepadding">
+	 <div class="container-fluid  titlepadding">
+		 <div class="text-center">
 		 <h1><span class="center">I am <strong>Juan Guillen</strong> </span></h1>
 
 		 <h2>and I want to help you build your website.</h2>
 		 <img src="../img/me-2x.jpg" class="avatar" alt="image of Juan Guillen" >
-		 <p class="parpadding">Anova Creative is a freelance service based in California, after earning my B.S. in Computer Science I decided to work for myself and help local businesses gain a better appearance in today's technological world. </P>
-		<p class="parpadding light-text">I share my experience while designing websites, developing marketing startegies and producing multimedia content for businesses.</p>
+		 <p>Anova Creative is a freelance service based in California, after earning my B.S. in Computer Science I decided to work for myself and help local businesses gain a better appearance in today's technological world. </P>
+		<p class="light-text">I share my experience while designing websites, developing marketing startegies and producing multimedia content for businesses.</p>
+		</div>
 	 </div>
  </div>
 
 <!--- Three Column Section -->
-<div class="container-fluid padding">
+<div class="container-fluid titlepadding">
 <div class="row text-center padding">
 	<div class="col-xs-12 col-sm-6 col-md-4">
 			<i class="fas fa-code"></i>
