--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 <!--- Welcome Section -->
  <div id="about">
-	 <div class="container-fluid  titlepadding">
+	 <div class="container-fluid titlepadding">
 		 <div class="text-center">
 		 <h1><span class="center">I am <strong>Juan Guillen</strong> </span></h1>
 
@@ -86,7 +86,7 @@
  </div>
 
 <!--- Three Column Section -->
-<div class="container-fluid titlepadding">
+<div class="container-fluid">
 <div class="row text-center padding">
 	<div class="col-xs-12 col-sm-6 col-md-4">
 			<i class="fas fa-code"></i>
