fixed spacing in description

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 </div>
 <!--- Welcome Section -->
  <div id="about">
-	 <div class="container-fluid titlepadding">
+	 <div class="container titlepadding">
 		 <div class="text-center">
 		 <h1><span class="center">I am <strong>Juan Guillen</strong> </span></h1>
 
 		 <h2>and I want to help you build your website.</h2>
 		 <img src="../img/me-2x.jpg" class="avatar" alt="image of Juan Guillen" >
-		 <p>Anova Creative is a freelance service based in California, after earning my B.S. in Computer Science I decided to work for myself and help local businesses gain a better appearance in today's technological world. </P>
-		<p class="light-text">I share my experience while designing websites, developing marketing startegies and producing multimedia content for businesses.</p>
+		 <p class="lead">Anova Creative is a freelance service based in California, after earning my B.S. in Computer Science I decided to work for myself and help local businesses gain a better appearance in today's technological world. </P>
+		 <p class=" light-text">I share my experience while designing websites, developing marketing startegies and producing multimedia content for businesses.</p>
 		</div>
 	 </div>
  </div>
