--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/v4-shims.css">
 	<script src="https://webfonts.creativecloud.com/varela-round:n4:default;questrial:n4:default.js" type="text/javascript"></script>
 	<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 	<link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -67,7 +68,7 @@
 <div class="container-fluid titlepadding">
 <div class="text-center">
 
-			<h1 class="col-12 display-3 text-center  "> Analyzing the culture of tech.</h1>
+			<h1 class="col-12 display-3 text-center animated bounceInDown delay-2s"> Analyzing the culture of tech.</h1>
 
 </div>
 </div>
