--- a/index.html
+++ b/index.html
@@ -58,105 +58,10 @@
 <div class="container-fluid">
 	<div class="text-center">
 
-		<h1 class="display-3"></h1>
+		<h1 class="display-3">Site is under Construction </h1>
 	</div>
 </div>
 
-
-<!--- Jumbotron -->
-
-<div class="container-fluid titlepadding">
-<div class="text-center">
-
-			<h1 class="col-12 display-3 text-center animated bounceInDown delay-2s"> Analyzing the culture of tech.</h1>
-
-</div>
-</div>
-<!--- Welcome Section -->
- <div id="about">
-	 <div class="container titlepadding">
-		 <div class="text-center">
-		 <h1><span class="center">I am <strong>Juan Guillen</strong> </span></h1>
-
-		 <h2>and I want to help you build your website.</h2>
-		 <img src="../img/me-2x.jpg" class="avatar" alt="image of Juan Guillen" >
-		 <p class="lead">Anova Creative is a freelance service based in California, after earning my B.S. in Computer Science I decided to work for myself and help local businesses gain a better appearance in today's technological world. </P>
-		 <p class=" light-text">I share my experience while designing websites, developing marketing startegies and producing multimedia content for businesses.</p>
-		</div>
-	 </div>
- </div>
-
-<!--- Three Column Section -->
-<div class="container-fluid">
-<div class="row text-center padding">
-	<div class="col-xs-12 col-sm-6 col-md-4">
-			<i class="fas fa-code"></i>
-			<h3>Hello</h3>
-			<p>Built with love</p>
-	</div>
-	<div class="col-xs-12 col-sm-6 col-md-4">
-			<i class="fas fa-code"></i>
-			<h3>Hello 2</h3>
-			<p>Built with love too</p>
-	</div>
-	<div class="col-xs-12 col-md-4">
-			<i class="fas fa-code"></i>
-			<h3>Hello 3</h3>
-			<p>Built with love three</p>
-	</div>
-
-</div>
-<hr class="my-4">
-</div>
-
-<!--- Two Column Section -->
-
-
-<!--- Fixed background -->
-<hr class="my-4">
-<figure>
-	<div class="fixed-wrap">
-			<div id="fixed">
-			</div>
-
-	</div>
-</figure>
-
-
-<!--- Emoji Section -->
-
-
-<!--- Meet the team -->
-<div id="work">
-<div class="container-fluid padding">
-<div class="row welcome text-center">
-		<div class="col-12">
-				<h1 class="display-4">Work</h1>
-		</div>
-</div>
-</div>
-</div>
-
-<!--Parallax vuejs -->
-<div id="app"></div>
-<!--- Cards -->
-
-
-<!--- Two Column Section -->
-
-
-<!--- Connect -->
-<div class="wall" id="connect">
-	<div class=" text-center ">
-		<div class="col-12">
-			<h2 class="display-2 white-text"> Let's Connect</h2>
-		</div>
-		<div class="col-12 padding social ">
-				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-youtube"></i></a>
-				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-linkedin"></i></a>
-				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-instagram"></i></a>
-	</div>
-</div>
 
 
 <!--- Footer -->
