--- a/index.html
+++ b/index.html
@@ -62,7 +62,17 @@
 	</div>
 </div>
 
-
+<div class="wall titlepadding" id="connect">
+	<div class="text-center ">
+		<div class="col-12">
+			<h2 class="display-2 white-text"> Let's Connect</h2>
+		</div>
+		<div class="col-12 padding social ">
+				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-youtube"></i></a>
+				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-linkedin"></i></a>
+				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-instagram"></i></a>
+	</div>
+</div>
 
 <!--- Footer -->
 <footer>
