--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<li class="nav-item ">
 						<a class="nav-link text-center nav-color" href="#">Home</a>
 					</li>
-					
+
 					<li class="nav-item">
 						<a class="nav-link text-center nav-color " href="#connect">Connect</a>
 					</li>
@@ -57,7 +57,7 @@
 <div class="wall titlepadding" id="connect">
 	<div class="text-center ">
 		<div class="col-12">
-			<h2 class="display-2 white-text"> Let's Connect</h2>
+			<h2 class="display-2 white-text animated fadeInUp delay-2s"> Let's Connect</h2>
 		</div>
 		<div class="col-12 padding social ">
 				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-youtube"></i></a>
