--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <footer>
 	<div class="container-fluid padding">
 	<div class="col-12 text-center white-text">
-			<p> Site by Juan Guillen</p>
+			<p>Site by <img src="../img/portfolio/jg logo116x32.png"></p>
 
 		</div>
 	</div>
