--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <footer>
 	<div class="container-fluid padding">
 	<div class="col-12 text-center white-text">
-			<p>Site by <img src="../img/portfolio/jg logo116x32_2x.png" height="115" width="32></p>
+			<p>Site by <img src="../img/portfolio/jg logo116x32_2x.png" height="115" width="32"></p>
 
 		</div>
 	</div>
