added footer spacing

--- a/index.html
+++ b/index.html
@@ -54,23 +54,26 @@
 	</div>
 </div>
 
-<div class="wall titlepadding" id="connect">
+
+<!--- Connect -->
+<div class="wall" id="connect">
 	<div class="text-center ">
 		<div class="col-12">
-			<h2 class="display-2 white-text animated fadeInUp delay-5s"> Let's Connect</h2>
+			<h2 class="display-2 white-text"> Let's Connect</h2>
 		</div>
 		<div class="col-12 padding social ">
 				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-youtube"></i></a>
 				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-linkedin"></i></a>
 				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-instagram"></i></a>
 	</div>
+ </div>
 </div>
 
 <!--- Footer -->
 <footer>
 	<div class="container-fluid padding">
-	<div class="col-12 text-center white-text">
-			<p>Site by <img src="../img/portfolio/jg logo116x32_2x.png" height="32" width="115"></p>
+	<div class="col-12 text-center">
+			<p>Site by <img src="../img/portfolio/jg logo116x32.png"></p>
 
 		</div>
 	</div>
