edited footer spacing

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <!--- Footer -->
 <footer>
 	<div class="container-fluid padding">
-	<div class="col-12 text-center white-text">
+	<div class="col-12 text-center ">
 			<p>Site by <img src="../img/portfolio/jg logo116x32_2x.png" height="32" width="115"></p>
 
 		</div>
