--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
 
 <!--- Image Slider -->
-<div class="container-fluid">
+<div class="container-fluid titlepadding">
 	<div class="text-center">
 
-		<h1 class="display-3 titlepadding">Site is under Construction </h1>
+		<h1 class="col-12 display-3 text-center">Site is under Construction </h1>
 	</div>
 </div>
 
-<div class="wall" id="connect">
+<div class="wall titlepadding" id="connect">
 	<div class="text-center ">
 		<div class="col-12">
 			<h2 class="display-2 white-text animated fadeInUp delay-5s"> Let's Connect</h2>
