--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div class="container-fluid titlepadding">
 	<div class="text-center">
 
-		<h1 class="col-12 display-3 text-center">Site is under Construction </h1>
+		<h1 class="col-12 text-center">Site is under Construction </h1>
 	</div>
 </div>
 
