--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 			<h2 class="display-2 white-text animated fadeInUp delay-5s"> Let's Connect</h2>
 		</div>
 		<div class="col-12 padding social ">
-				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-youtube"></i></a>
+				<!--<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-youtube"></i></a>-->
 				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-linkedin"></i></a>
-				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-instagram"></i></a>
+				<!--<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-instagram"></i></a>-->
 	</div>
 </div>
 </div>
