fixed lower res scaling issue

--- a/index.html
+++ b/index.html
@@ -48,21 +48,19 @@
 
 <!--- Image Slider -->
 <div class="container-fluid titlepadding">
-	<div class="text-center">
 
-		<h1 class="col-12 text-center">Site is under Construction </h1>
-	</div>
+		<h1 class="text-center">Site is under Construction </h1>
+
 </div>
 
-<div class="wall titlepadding" id="connect">
+<div class="container-fluid wall titlepadding" id="connect">
 	<div class="text-center ">
-		<div class="col-12">
-			<h2 class="display-2 white-text animated fadeInUp delay-5s"> Let's Connect</h2>
-		</div>
-		<div class="col-12 padding social ">
-				<!--<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-youtube"></i></a>-->
-				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-linkedin"></i></a>
-				<!--<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-instagram"></i></a>-->
+
+			<h2 class="display-3 white-text animated fadeInUp delay-5s"> Let's Connect</h2>
+				<div class="col-12 padding social ">
+					<!--<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-youtube"></i></a>-->
+					<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-linkedin"></i></a>
+					<!--<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-instagram"></i></a>-->
 	</div>
 </div>
 </div>
@@ -70,7 +68,7 @@
 <!--- Footer -->
 <footer>
 	<div class="container-fluid padding">
-	<div class="col-12 text-center ">
+	<div class= text-center ">
 			<p>Site by <img src="../img/portfolio/jg logo116x32_2x.png" height="32" width="115"></p>
 
 		</div>
