--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-  	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/v4-shims.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/v4-shims.css">
 	<script src="https://webfonts.creativecloud.com/varela-round:n4:default;questrial:n4:default.js" type="text/javascript"></script>
 	<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+	<script type="text/jscript" src="js/scrolly.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 	<link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
