added white navbar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-md bg-light navbar-light sticky-top">
+<nav class="navbar navbar-expand-md navbar-light stickt-top" style="background-color: #ffffff;" >
 <div class="container-fluid ">
 		<a class="navbar-brand " href="#"><img src="../img/portfolio/Anova.png" alt="Anova Creative Logo"></a>
 
