fixed postioned navbar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light stickt-top" style="background-color: #ffffff;" >
 <div class="container-fluid ">
-		<a class="navbar-brand " href="#"><img src="../img/portfolio/Anova.png" alt="Anova Creative Logo"></a>
+		<a class="navbar-brand " href="#"><img src="img/portfolio/Anova.png" alt="Anova Creative Logo"></a>
 
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -48,7 +48,7 @@
 
 
 <!--- Image Slider -->
-<div class="container-fluid titlepadding">
+<div class="container-fluid titlepadding ">
 
 		<h1 class="text-center">Site is under Construction </h1>
 
