--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <!--- Footer -->
 <footer>
 	<div class="container-fluid padding">
-	<div class= text-center ">
+	<div class= "text-center ">
 			<p>Site by <img src="../img/portfolio/jg logo116x32_2x.png" height="32" width="115"></p>
 
 		</div>
