--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-md navbar-light stickt-top" style="background-color: #ffffff;" >
+<nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: #ffffff;" >
 <div class="container-fluid ">
 		<a class="navbar-brand " href="#"><img src="img/portfolio/Anova.png" alt="Anova Creative Logo"></a>
 
