finally launched real Site

--- a/index.html
+++ b/index.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127418658-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'UA-127418658-1');
-	</script>
-<meta charset="utf-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="../img/Anova_favicon.png"/>
 	<title>Anova Creative</title>
@@ -30,8 +21,8 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: #ffffff;" >
-<div class="container-fluid ">
-		<a class="navbar-brand " href="#"><img src="img/portfolio/Anova.png" alt="Anova Creative Logo"></a>
+<div class="container-fluid">
+		<a class="navbar-brand" href="#"><img src="../img/portfolio/Anova.png" alt="Anova Creative Logo"></a>
 
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -40,7 +31,16 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto ">
 					<li class="nav-item ">
-						<a class="nav-link text-center nav-color" href="#">Home</a>
+						<a class="nav-link text-center nav-color" href="#top">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-center nav-color" href="#about">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-center nav-color " href="#skills">Skills</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-center nav-color " href="#work">Work</a>
 					</li>
 
 					<li class="nav-item">
@@ -56,34 +56,283 @@
 
 
 <!--- Image Slider -->
-<div class="container-fluid titlepadding ">
+<div class="container-fluid">
+	<div class="text-center">
 
-		<h1 class="text-center">Site is under Construction </h1>
 
-</div>
-
-<div class="container-fluid wall titlepadding scrolly" id="connect">
-	<div class="text-center ">
-
-			<h2 class="display-3 white-text animated fadeInUp delay-5s"> Let's Connect</h2>
-				<div class="col-12 padding social ">
-					<!--<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-youtube"></i></a>-->
-					<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-linkedin"></i></a>
-					<!--<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-instagram"></i></a>-->
+		<h1 class="display-3"></h1>
 	</div>
 </div>
+
+<!--- Video Background-->
+<div class="hero-image gradient" id="top">
+	<h1 class="display-3 animated bounceInDown delay-2s "> Analyzing the culture of tech<span class="blinking-period">.</span></h1>
+
+		<video autoplay loop muted poster="./img/website header.jpg" id="background">
+  	<source src="./img/website header.mp4" type="video/mp4">
+		</video>
+
+</div>
+
+<!--- Working hero image
+
+<div class="hero-image" id="top">
+
+				<h1 class="display-3 animated bounceInDown delay-2s "> Analyzing the culture of tech.</h1>
+
+
+</div>
+-->
+
+<!--- Three Column Section -->
+<div class="container-fluid">
+<div class="row text-center titlepadding">
+	<div class="col-xs-12 col-sm-6 col-md-4">
+
+		<img
+    src="img/design.svg"
+    alt="Coding tips"
+    height="87px"
+    width="100px"
+		/>
+
+			<h3 class="iconpadding">Design</h3>
+
+			<p>Design and create grapics for your website.</p>
+
+	</div>
+	<div class="col-xs-12 col-sm-6 col-md-4">
+		<img
+		src="img/coding.svg"
+		alt="Coding tips"
+		height="87px"
+		width="100px"
+		/>
+			<h3 class="iconpadding">Code</h3>
+			<p>Tips and tricks to get to developing</p>
+	</div>
+	<div class="col-xs-12 col-md-4">
+		<img
+		src="img/create.svg"
+		alt="Coding tips"
+		height="87px"
+		width="100px"
+		/>
+			<h3 class="iconpadding">Create</h3>
+			<p>Add the final touches to your site, photo and video content.</p>
+	</div>
+</div>
+</div>
+
+<!--- Welcome Section -->
+ <div id="about">
+	 <div class="container titlepadding sentencepadding ">
+		 <div class="text-center">
+
+		 <p class="lead">Anova Creative is a freelance service based in California, after earning my B.S. in Computer Science I decided to work for myself and help local businesses gain a better appearance in today's technological world. </P>
+		 <p class=" light-text">I share my experience while designing websites, developing marketing startegies and producing multimedia content for businesses.</p>
+
+	  </div>
+	 </div>
+ </div>
+</div>
+</div>
+
+
+
+<!--- Skills -->
+
+<div id="skills">
+		<div class="container-fluid titlepadding">
+			<div class="row welcome text-center">
+				<div class="col-12">
+				<h1 class="display-4">Skills</h1>
+				<h6>Learn new things</h6>
+
+</div>
+
+		<div class="container-fluid">
+			<div class="row text-center">
+
+							<figure class="col-xs-12 col-sm-6 col-md-4">
+			  				<img src="img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+			  				<figcaption class="figure-caption">A caption for the above image.</figcaption>
+							</figure>
+
+							<figure class="col-xs-12 col-sm-6 col-md-4">
+								<img src="img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+								<figcaption class="figure-caption">A caption for the above image.</figcaption>
+							</figure>
+
+							<figure class="col-xs-12 col-sm-6 col-md-4">
+								<img src="img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+								<figcaption class="figure-caption">A caption for the above image.</figcaption>
+							</figure>
+
+							<figure class="col-xs-12 col-sm-6 col-md-4">
+								<img src="img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+								<figcaption class="figure-caption">A caption for the above image.</figcaption>
+							</figure>
+							<!-- This section is for video links
+							<figure class="col-xs-12 col-sm-6 col-md-4">
+			  				<iframe width="400" height="230" src="https://www.youtube.com/embed/TsbXYr5nHK4" alt="A generic square placeholder image with rounded corners in a figure.">
+								</iframe>
+			  				<figcaption class="figure-caption">A caption for the above image.</figcaption>
+							</figure>
+						-->
+							<figure class="col-xs-12 col-sm-6 col-md-4">
+								<img src="img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+								<figcaption class="figure-caption">A caption for the above image.</figcaption>
+							</figure>
+							<figure class="col-xs-12 col-sm-6 col-md-4">
+								<img src="img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+								<figcaption class="figure-caption">A caption for the above image.</figcaption>
+							</figure>
+
+
+			</div>
+		</div>
+
+
+		</div>
+	</div>
+
+</div>
+
+
+
+
+<section id="work">
+	<section id="bluewall">
+		<div class="container-full ">
+			<div class="whtitle text-center bluewall">
+				<h2 class="display-4 white-text"> Work</h2>
+			</div>
+		</div>
+	</section>
+</section>
+
+
+<section id="bluewall">
+		<div class="container">
+			<div class="text-center">
+				<h2 class="white-title uppercase">Keep up to date with web dev trends.</h2>
+
+			</div>
+		</div>
+</section>
+
+
+
+<!--- Two Column Section
+<div id="skills">
+	<div class="padding">
+	<div class="container">
+
+			<div class="col-md-6">
+				<h1><span class="center">Test</span></h1>
+
+			</div>
+			<div class="col-md-6">
+				<h1><span>Test</span></h1>
+
+			</div>
+
+  </div>
+	</div>
+</div>
+
+
+-->
+<!--- Emoji Section -->
+
+
+<!--- About me -->
+<div class="container titlepadding">
+	<div class="text-center">
+		<h1><span class="center">I am <strong>Juan Guillen</strong> </span></h1>
+
+		<h2>and I want to help you build your website.</h2>
+
+		<img src="../img/me-2x.jpg" class="avatar" alt="image of Juan Guillen" >
+
+	</div>
+</div>
+
+<!--- Two Column Section -->
+
+
+<!--- Connect -->
+<div class="container-fluid wall titlepadding lowerpadding" id="connect">
+	<div class="text-center ">
+
+			<h2 class="display-3 white-text"> Let's Connect</h2>
+
+			<div class="col-12 social">
+				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-youtube"></i></a>
+				<a href="https://www.linkedin.com/in/juanguillenweb/"><i class="fab fa-linkedin"></i></a>
+				<a href="https://www.instagram.com/anovacreative/"><i class="fab fa-instagram"></i></a>
+			</div>
+ </div>
 </div>
 
 <!--- Footer -->
 <footer>
 	<div class="container-fluid padding">
-	<div class= "text-center ">
+	<div class="col-12 text-center ">
 			<p>Site by <img src="../img/portfolio/jg logo116x32_2x.png" height="32" width="115"></p>
+			<div class="darkicon">
 
+			<a href="#top"><input type="image"  alt="Login" src=<i class="fas fa-chevron-circle-up"></i></a>
 		</div>
+	</div>
 	</div>
 
 </footer>
 
+
+
+
+
+
+
+
+
+<script> // Select all links with hashes
+$('a[href*="#"]')
+  // Remove links that don't actually link to anything
+  .not('[href="#"]')
+  .not('[href="#0"]')
+  .click(function(event) {
+    // On-page links
+    if (
+      location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '')
+      &&
+      location.hostname == this.hostname
+    ) {
+      // Figure out element to scroll to
+      var target = $(this.hash);
+      target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+      // Does a scroll target exist?
+      if (target.length) {
+        // Only prevent default if animation is actually gonna happen
+        event.preventDefault();
+        $('html, body').animate({
+          scrollTop: target.offset().top
+        }, 1000, function() {
+          // Callback after animation
+          // Must change focus!
+          var $target = $(target);
+          $target.focus();
+          if ($target.is(":focus")) { // Checking if the target was focused
+            return false;
+          } else {
+            $target.attr('tabindex','-1'); // Adding tabindex for elements not focusable
+            $target.focus(); // Set focus again
+          };
+        });
+      }
+    }
+  });</script>
 </body>
 </html>
