relinked video file

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 <div class="hero-image gradient" id="top">
 	<h1 class="display-3 animated bounceInDown delay-2s "> Analyzing the culture of tech<span class="blinking-period">.</span></h1>
 
-		<video autoplay loop muted poster="./img/website header.jpg" id="background">
-  	<source src="./img/website header.mp4" type="video/mp4">
+		<video autoplay loop muted poster="../img/website header.jpg" id="background">
+  	<source src="../img/website header.mp4" type="video/mp4">
 		</video>
 
 </div>
