--- a/index.html
+++ b/index.html
@@ -155,22 +155,22 @@
 			<div class="row text-center">
 
 							<figure class="col-xs-12 col-sm-6 col-md-4">
-			  				<img src="img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+			  				<img src="../img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
 			  				<figcaption class="figure-caption">A caption for the above image.</figcaption>
 							</figure>
 
 							<figure class="col-xs-12 col-sm-6 col-md-4">
-								<img src="img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+								<img src="../img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
 								<figcaption class="figure-caption">A caption for the above image.</figcaption>
 							</figure>
 
 							<figure class="col-xs-12 col-sm-6 col-md-4">
-								<img src="img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+								<img src="../img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
 								<figcaption class="figure-caption">A caption for the above image.</figcaption>
 							</figure>
 
 							<figure class="col-xs-12 col-sm-6 col-md-4">
-								<img src="img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+								<img src="../img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
 								<figcaption class="figure-caption">A caption for the above image.</figcaption>
 							</figure>
 							<!-- This section is for video links
@@ -181,11 +181,11 @@
 							</figure>
 						-->
 							<figure class="col-xs-12 col-sm-6 col-md-4">
-								<img src="img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+								<img src="../img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
 								<figcaption class="figure-caption">A caption for the above image.</figcaption>
 							</figure>
 							<figure class="col-xs-12 col-sm-6 col-md-4">
-								<img src="img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+								<img src="../img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
 								<figcaption class="figure-caption">A caption for the above image.</figcaption>
 							</figure>
 
