--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	<div class="col-xs-12 col-sm-6 col-md-4">
 
 		<img
-    src="img/design.svg"
+    src="../img/design.svg"
     alt="Coding tips"
     height="87px"
     width="100px"
@@ -103,7 +103,7 @@
 	</div>
 	<div class="col-xs-12 col-sm-6 col-md-4">
 		<img
-		src="img/coding.svg"
+		src="../img/coding.svg"
 		alt="Coding tips"
 		height="87px"
 		width="100px"
@@ -113,7 +113,7 @@
 	</div>
 	<div class="col-xs-12 col-md-4">
 		<img
-		src="img/create.svg"
+		src="../img/create.svg"
 		alt="Coding tips"
 		height="87px"
 		width="100px"
