--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
 <!--- Image Slider -->
-<div class="container-fluid">
+
 	<div class="text-center">
 
 
@@ -64,15 +64,18 @@
 	</div>
 </div>
 
+
 <!--- Video Background-->
-<div class="hero-image gradient" id="top">
+
+<div class="hero-image " id="top">
 	<h1 class="display-3 animated bounceInDown delay-2s "> Analyzing the culture of tech<span class="blinking-period">.</span></h1>
 
 		<video autoplay loop muted poster="../img/website header.jpg" id="background">
-  	<source src="../img/website header.mp4" type="video/mp4">
+  	<source src="./img/website header.mp4" type="video/mp4">
 		</video>
 
 </div>
+
 
 <!--- Working hero image
 
