--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
 
-<!--- Video Background-->
+<!--- Video Background
 
 <div class="hero-image" id="top">
 	<h1 class="display-3 animated bounceInDown delay-2s "> Analyzing the culture of tech<span class="blinking-period">.</span></h1>
@@ -70,7 +70,22 @@
 
 </div>
 
+-->
 
+<header>
+<div class="overlay "></div>
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+    <source src="./img/website header.mp4" type="video/mp4">
+  </video>
+  <div class="container h-100">
+    <div class="d-flex text-center h-100">
+      <div class="my-auto w-100 text-white">
+        <h1 class="display-3 animated bounceInDown delay-2s "> Analyzing the culture of tech<span class="blinking-period">.</span></h1>
+        <h2></h2>
+      </div>
+    </div>
+  </div>
+</header>
 <!--- Working hero image
 
 <div class="hero-image" id="top">
@@ -82,6 +97,7 @@
 -->
 
 <!--- Three Column Section -->
+<div id="about">
 <div class="container-fluid">
 <div class="row text-center titlepadding">
 	<div class="col-xs-12 col-sm-6 col-md-4">
@@ -122,7 +138,7 @@
 </div>
 
 <!--- Welcome Section -->
- <div id="about">
+
 	 <div class="container titlepadding sentencepadding ">
 		 <div class="text-center">
 
