--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 -->
 
 <header>
-<div class="overlay "></div>
+<div class="overlay" id="top"></div>
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
     <source src="./img/website header.mp4" type="video/mp4">
   </video>
@@ -210,7 +210,25 @@
 </div>
 
 
+<section id="work">
+	<section id="bluewall">
+		<div class="container-full ">
+			<div class="whtitle text-center bluewall">
+				<h2 class="display-4 white-text"> Work</h2>
+			</div>
+		</div>
+	</section>
+</section>
 
+
+<section id="bluewall">
+		<div class="container">
+			<div class="text-center">
+				<h2 class="white-title uppercase">Keep up to date with web dev trends.</h2>
+
+			</div>
+		</div>
+</section>
 
 
 
