--- a/index.html
+++ b/index.html
@@ -210,25 +210,53 @@
 </div>
 
 
-<section id="work">
-	<section id="bluewall">
-		<div class="container-full ">
-			<div class="whtitle text-center bluewall">
-				<h2 class="display-4 white-text"> Work</h2>
+<div id="work">
+		<div class="container-full bluewall">
+			<div class="whtitle text-center">
+				<div class="col-12">
+				<h1 class="display-4 white-text">Work</h1>
+				<h6 class="white-text">Check what I've been up to.</h6>
+
+				</div>
+
+				<h4 class="text-center white-text "> Carlson Commodities Responsive website design </h4>
+				<div class="row">
+				<div style="padding-top:2em;" class="col-xs-12 col-md-12">
+				<h3 class="white-text lowerpadding">Desktop</h3>
+				<img id="myImg" src="../img/Work/HOME page.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
+				<img id="myImg" src="../img/Work/CONTACT.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
+				<img id="myImg" src="../img/Work/TYPOGRAPHY.png" alt="Branding Guidlines" style=" padding-top:2em; width:90%;max-width:500px ">
 			</div>
-		</div>
-	</section>
-</section>
+			<div style="padding-top:2em;" class="col-xs-12 col-md-12">
+				<h3 class="white-text lowerpadding">Mobile</h3>
+				<img id="myImg" src="../img/Work/carlsonMobile.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
+				<img id="myImg" src="../img/Work/carlsonMobile3.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
 
+				</div>
+			</div>
+				<!-- The Modal -->
+				<div id="myModal" class="modal ">
 
-<section id="bluewall">
-		<div class="container">
-			<div class="text-center">
-				<h2 class="white-title uppercase">Keep up to date with web dev trends.</h2>
+				  <!-- The Close Button -->
+				  <span class="close">&times;</span>
+
+				  <!-- Modal Content (The Image) -->
+				  <img class="modal-content" id="img01">
+
+				  <!-- Modal Caption (Image Text) -->
+				  <div id="caption"></div>
+				</div>
+				<h6 class="white-text">Try the interactive website prototype</h6>
+				<a href="https://xd.adobe.com/embed/910c4623-1042-4c35-426f-58a7dae10062-e73d/" class="btn btn-outline-light" role="button" aria-pressed="true">Open Prototype</a>
 
 			</div>
+
 		</div>
-</section>
+</div>
+
+
+
+
 
 
 
@@ -257,6 +285,7 @@
 
 -->
 <!--- Emoji Section -->
+<!-- Trigger the Modal -->
 
 
 <!--- About me -->
@@ -347,5 +376,28 @@ $('a[href*="#"]')
       }
     }
   });</script>
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById('myImg');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+    modal.style.display = "block";
+    modalImg.src = this.src;
+    captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+</script>
 </body>
 </html>
