--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 
 <div id="work">
-		<div class="container-full bluewall">
+		<div class="container-fluid bluewall">
 			<div class="whtitle text-center">
 				<div class="col-12">
 				<h1 class="display-4 white-text">Work</h1>
@@ -249,13 +249,21 @@
 				<h6 class="white-text">Try the interactive website prototype</h6>
 				<a href="https://xd.adobe.com/embed/910c4623-1042-4c35-426f-58a7dae10062-e73d/" class="btn btn-outline-light" role="button" aria-pressed="true">Open Prototype</a>
 
-			</div>
 
+			<div class="container-fluid">
+				<div class="text-center">
+				<h3 class="white-text" style="padding-top:1em;">Other Work</h3>
+
+				<a href="https://hopper.csustan.edu/~jguillen/"><img src="../img/Work/stan.png" class="workicons" alt="image of CSU Stanislaus" ></a>
+				<a href="http://jgph.x10host.com"><img src="../img/Work/JGPH.png" class="workicons" alt="image of JGPH Photographs" ></a>
+			</div>
+			</div>
 		</div>
 </div>
 
 
 
+</div>
 
 
 
@@ -303,7 +311,7 @@
 
 
 <!--- Connect -->
-<div class="container-fluid wall titlepadding lowerpadding" id="connect">
+<div class="container-fluid wall titlepadding" id="connect">
 	<div class="text-center ">
 
 			<h2 class="display-3 white-text"> Let's Connect</h2>
