added mobile picture

--- a/index.html
+++ b/index.html
@@ -181,26 +181,27 @@
 								<img src="../img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
 								<figcaption class="figure-caption">A caption for the above image.</figcaption>
 							</figure>
-
+							<!-- Additional blocks if needed 6
 							<figure class="col-xs-12 col-sm-6 col-md-4">
 								<img src="../img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
 								<figcaption class="figure-caption">A caption for the above image.</figcaption>
 							</figure>
-							<!-- This section is for video links
+							<figure class="col-xs-12 col-sm-6 col-md-4">
+								<img src="../img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+								<figcaption class="figure-caption">A caption for the above image.</figcaption>
+							</figure>
+							<figure class="col-xs-12 col-sm-6 col-md-4">
+								<img src="../img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+								<figcaption class="figure-caption">A caption for the above image.</figcaption>
+							</figure>
+						 This section is for video links
 							<figure class="col-xs-12 col-sm-6 col-md-4">
 			  				<iframe width="400" height="230" src="https://www.youtube.com/embed/TsbXYr5nHK4" alt="A generic square placeholder image with rounded corners in a figure.">
 								</iframe>
 			  				<figcaption class="figure-caption">A caption for the above image.</figcaption>
 							</figure>
 						-->
-							<figure class="col-xs-12 col-sm-6 col-md-4">
-								<img src="../img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-								<figcaption class="figure-caption">A caption for the above image.</figcaption>
-							</figure>
-							<figure class="col-xs-12 col-sm-6 col-md-4">
-								<img src="../img/Project thumbnail.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-								<figcaption class="figure-caption">A caption for the above image.</figcaption>
-							</figure>
+
 
 
 			</div>
@@ -215,11 +216,11 @@
 			<div class="whtitle text-center">
 				<div class="col-12">
 				<h1 class="display-4 white-text">Work</h1>
-				<h6 class="white-text">Check what I've been up to.</h6>
+				<h6 class="white-text">View some of my most recent work.</h6>
 
 				</div>
 
-				<h4 class="text-center white-text "> Carlson Commodities Responsive website design </h4>
+				<h5 class="text-center white-text "> Carlson Commodities Responsive Website Design </h5>
 				<div class="row">
 				<div style="padding-top:2em;" class="col-xs-12 col-md-12">
 				<h3 class="white-text lowerpadding">Desktop</h3>
@@ -230,6 +231,7 @@
 			<div style="padding-top:2em;" class="col-xs-12 col-md-12">
 				<h3 class="white-text lowerpadding">Mobile</h3>
 				<img id="myImg" src="../img/Work/carlsonMobile.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
+				<img id="myImg" src="../img/Work/carlsonMobileNav.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
 				<img id="myImg" src="../img/Work/carlsonMobile3.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
 
 				</div>
