--- a/index.html
+++ b/index.html
@@ -224,20 +224,22 @@
 				<div class="row">
 				<div style="padding-top:2em;" class="col-xs-12 col-md-12">
 				<h3 class="white-text lowerpadding">Desktop</h3>
-				<img id="myImg" src="../img/Work/HOME page.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
-				<img id="myImg" src="../img/Work/CONTACT.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
-				<img id="myImg" src="../img/Work/TYPOGRAPHY.png" alt="Branding Guidlines" style=" padding-top:2em; width:90%;max-width:500px ">
+				<img class="myImages" id="myImg" src="../img/Work/HOME page.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
+				<img class="myImages" id="myImg" src="../img/Work/CONTACT.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
+				<img class="myImages" id="myImg" src="../img/Work/TYPOGRAPHY.png" alt="Branding Guidlines" style=" padding-top:2em; width:90%;max-width:500px ">
+
+
 			</div>
 			<div style="padding-top:2em;" class="col-xs-12 col-md-12">
 				<h3 class="white-text lowerpadding">Mobile</h3>
-				<img id="myImg" src="../img/Work/carlsonMobile.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
-				<img id="myImg" src="../img/Work/carlsonMobileNav.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
-				<img id="myImg" src="../img/Work/carlsonMobile3.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
-
-				</div>
+				<img class="myImages" id="myImg" src="../img/Work/carlsonMobile.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
+				<img class="myImages" id="myImg" src="../img/Work/carlsonMobileNav.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
+				<img class="myImages" id="myImg" src="../img/Work/carlsonMobile3.png" alt="Carlson Commodities Home page" style="width:90%;max-width:300px">
 			</div>
+			</div>
+
 				<!-- The Modal -->
-				<div id="myModal" class="modal ">
+				<div id="myModal" class="modal">
 
 				  <!-- The Close Button -->
 				  <span class="close">&times;</span>
@@ -349,26 +351,33 @@
 
 
 <script>
-// Get the modal
+// create references to the modal...
 var modal = document.getElementById('myModal');
-
-// Get the image and insert it inside the modal - use its "alt" text as a caption
-var img = document.getElementById('myImg');
+// to all images -- note I'm using a class!
+var images = document.getElementsByClassName('myImages');
+// the image in the modal
 var modalImg = document.getElementById("img01");
+// and the caption in the modal
 var captionText = document.getElementById("caption");
-img.onclick = function(){
+
+// Go through all of the images with our custom class
+for (var i = 0; i < images.length; i++) {
+  var img = images[i];
+  // and attach our click listener for this image.
+  img.onclick = function(evt) {
+    console.log(evt);
     modal.style.display = "block";
     modalImg.src = this.src;
     captionText.innerHTML = this.alt;
+  }
 }
 
-// Get the <span> element that closes the modal
 var span = document.getElementsByClassName("close")[0];
 
-// When the user clicks on <span> (x), close the modal
 span.onclick = function() {
-    modal.style.display = "none";
+  modal.style.display = "none";
 }
+
 </script>
 
 <script> // Select all links with hashes
