--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 				<div class="text-center">
 				<h3 class="white-text" style="padding-top:1em;">Other Work</h3>
 
-				<a href="https://hopper.csustan.edu/~jguillen/"><img src="../img/Work/stan.png" class="workicons" alt="image of CSU Stanislaus" ></a>
+				<a href="https://hopper.csustan.edu/~jguillen/"><img src="../img/Work/stan.png" class="workicons" alt="image of Juan's projects at CSU STANISLAUS" ></a>
 				<a href="http://jgph.x10host.com"><img src="../img/Work/JGPH.png" class="workicons" alt="image of JGPH Photographs" ></a>
 				<a href="https://hopper.csustan.edu/~jguillen/Database.html"><img src="http://pngimg.com/uploads/mysql/mysql_PNG9.png" class="workicons" alt="Sample database created by Juan" ></a>
 
