--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: #ffffff;" >
 <div class="container-fluid">
-		<a class="navbar-brand" href="#"><img src="../img/portfolio/Anova.png" alt="Anova Creative Logo"></a>
+		<a class="navbar-brand" href="#"><img src="../img/Anovalogoanimation.gif" alt="Anova Creative Logo"></a>
 
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -260,7 +260,7 @@
 
 				<a href="https://hopper.csustan.edu/~jguillen/"><img src="../img/Work/stan.png" class="workicons" alt="image of Juan's projects at CSU STANISLAUS" ></a>
 				<a href="http://jgph.x10host.com"><img src="../img/Work/JGPH.png" class="workicons" alt="image of JGPH Photographs" ></a>
-				<a href="https://hopper.csustan.edu/~jguillen/Database.html"><img src="http://pngimg.com/uploads/mysql/mysql_PNG9.png" class="workicons" alt="Sample database created by Juan" ></a>
+				<a href="https://hopper.csustan.edu/~jguillen/Database.html"><img src="https://pngimg.com/uploads/mysql/mysql_PNG9.png" class="workicons" alt="Sample database created by Juan" ></a>
 
 
 			</div>
