--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <!--- Video Background
 
 <div class="hero-image" id="top">
-	<h1 class="display-3 animated bounceInDown delay-2s "> Analyzing the culture of tech<span class="blinking-period">.</span></h1>
+	<h1 class="display-3 animated bounceInDown delay-2s ">We get the right eyes on your site<span class="blinking-period">.</span></h1>
 
 		<video autoplay loop muted poster="../img/website header.jpg" id="background">
   	<source src="./img/website header.mp4" type="video/mp4">
