--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="container h-100">
     <div class="d-flex text-center h-100">
       <div class="my-auto w-100 text-white">
-        <h1 class="display-3 animated bounceInDown delay-2s "> Analyzing the culture of tech<span class="blinking-period">.</span></h1>
+        <h1 class="display-3 animated bounceInDown delay-2s "> We get the right eyes on your site<span class="blinking-period">.</span></h1>
         <h2></h2>
       </div>
     </div>
@@ -90,7 +90,7 @@
 
 <div class="hero-image" id="top">
 
-				<h1 class="display-3 animated bounceInDown delay-2s "> Analyzing the culture of tech.</h1>
+				<h1 class="display-3 animated bounceInDown delay-2s "> We get the right eyes on your site.</h1>
 
 
 </div>
