--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 			<div class="container-fluid">
 				<div class="text-center">
 				<h3 class="white-text" style="padding-top:1em;">Other Work</h3>
-				<a href="https://lalasheek.com/"><img src="../img/Work/stan.png" class="workicons" alt="image of LALA SHEEK" ></a>
+				<a href="https://lalasheek.com/"><img src="../img/LALASheek-03.jpg" class="workicons" alt="image of LALA SHEEK" ></a>
 				<a href="https://betterbuilttruss.com/"><img src="../img/Work/stan.png" class="workicons" alt="image of BBT" ></a>
 
 				<a href="https://hopper.csustan.edu/~jguillen/"><img src="../img/Work/stan.png" class="workicons" alt="image of Juan's projects at CSU STANISLAUS" ></a>
