--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@
 
 <!--- Skills -->
 <div class="container-fluid">
+	<div class="row welcome text-center">
+				<div class="col-12">
+				<h1 class="display-4">Skills</h1>
+				<h6>Learn new things</h6>
+
+				</div>
 				<div class="text-center">
 				<h3 class="white-text" style="padding-top:1em;">Other Work</h3>
 				<a href="https://lalasheek.com/"><img src="../img/LALASheek-03.jpg" class="workicons" alt="image of LALA SHEEK" ></a>
@@ -166,6 +172,7 @@
 
 
 			</div>
+	</div>
 			</div>
 <div id="skills">
 		<div class="container-fluid titlepadding">
