--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 <div class="container-fluid">
 	<div class="row welcome text-center">
 				<div class="col-12">
-				<h1 class="display-4">Skills</h1>
-				<h6>Learn new things</h6>
+				<h1 class="display-4">Work</h1>
+				<h6>Client Sites</h6>
 
 				</div>
 				<div class="text-center">
@@ -172,7 +172,7 @@
 
 
 			</div>
-	</div>
+	
 			</div>
 <div id="skills">
 		<div class="container-fluid titlepadding">
