--- a/index.html
+++ b/index.html
@@ -164,13 +164,14 @@
 				<div class="text-center">
 				<h3 class="white-text" style="padding-top:1em;">Other Work</h3>
 				<a href="https://lalasheek.com/"><img src="../img/LALASheek-03.jpg" class="workicons" alt="image of LALA SHEEK" ></a>
-				<a href="https://betterbuilttruss.com/"><img src="../img/Work/MASTERBBTLOGO_50%white.png" class="workicons" alt="image of BBT" ></a>
+				<a href="https://betterbuilttruss.com/"><img src="../img/Work/MASTERBBTLOGO_50white.png" class="workicons" alt="image of BBT" ></a>
 
 				<a href="https://hopper.csustan.edu/~jguillen/"><img src="../img/Work/stan.png" class="workicons" alt="image of Juan's projects at CSU STANISLAUS" ></a>
 				<a href="http://jgph.x10host.com"><img src="../img/Work/JGPH.png" class="workicons" alt="image of JGPH Photographs" ></a>
 				<a href="https://hopper.csustan.edu/~jguillen/Database.html"><img src="https://pngimg.com/uploads/mysql/mysql_PNG9.png" class="workicons" alt="Sample database created by Juan" ></a>
 
-
+</div>
+			</div>
 			</div>
 	
 			</div>
