--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 				<h6>Client Sites</h6>
 
 				</div>
+		</div>
+		
 				<div class="text-center">
 				<h3 class="white-text" style="padding-top:1em;">Other Work</h3>
 				<a href="https://lalasheek.com/"><img src="../img/LALASheek-03.jpg" class="workicons" alt="image of LALA SHEEK" ></a>
