--- a/index.html
+++ b/index.html
@@ -161,10 +161,12 @@
 				<h6>Client Sites</h6>
 
 				</div>
-		</div>
+		
 		
 				<div class="text-center">
 				<h3 class="white-text" style="padding-top:1em;">Other Work</h3>
+				
+				<div style="padding-top:2em;" class="col-xs-12 col-md-12">	
 				<a href="https://lalasheek.com/"><img src="../img/LALASheek-03.jpg" class="workicons" alt="image of LALA SHEEK" ></a>
 				<a href="https://betterbuilttruss.com/"><img src="../img/Work/MASTERBBTLOGO_50white.png" class="workicons" alt="image of BBT" ></a>
 
@@ -173,7 +175,7 @@
 				<a href="https://hopper.csustan.edu/~jguillen/Database.html"><img src="https://pngimg.com/uploads/mysql/mysql_PNG9.png" class="workicons" alt="Sample database created by Juan" ></a>
 
 </div>
-			
+			</div>
 	
 			</div>
 <div id="skills">
