--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 
 
-<!--- Skills -->
+<!--- Skills 
 <div class="container-fluid">
 	<div class="row welcome text-center">
 				<div class="col-12">
@@ -233,7 +233,7 @@
 	</div>
 </div>
 
-
+-->
 <div id="work">
 		<div class="container-fluid bluewall">
 			<div class="whtitle text-center">
